fixed height of mission statement, extra row was causing too much height. keeping corner nav in open position as default based on user testing (Cara)

--- a/lucid-fe/public/less/pg-mission.less
+++ b/lucid-fe/public/less/pg-mission.less
@@ -1,10 +1,10 @@
 section#mission .grid-mission{
     display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: .66fr 1fr 1fr 1fr;
+        grid-template-rows: .66fr 1fr 1fr;
      margin: 1em;
      grid-gap: 1em;
-     min-height: 50vw;
+     min-height: 50vh;
     }
 
     .flex-box-mission {
