--- a/lucid-fe/src/index.css
+++ b/lucid-fe/src/index.css
@@ -93,10 +93,10 @@ section#home .main {
 section#mission .grid-mission {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.66fr 1fr 1fr 1fr;
+  grid-template-rows: 0.66fr 1fr 1fr;
   margin: 1em;
   grid-gap: 1em;
-  min-height: 50vw;
+  min-height: 50vh;
 }
 .flex-box-mission {
   display: flex;
